--- a/operations/success.HTML
+++ b/operations/success.HTML
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt">
 <body>
-    <p>Insercao bem sucedida!</p>
-    <p> Clique aqui para voltar ao menu inicial: <a href="../disciplinesMenu.php">Voltar</a>.</p>
+    <h2>Insercao bem sucedida!</h2>
+    <p>Clique aqui para voltar ao menu inicial: <a href="../disciplinesMenu.php">Voltar</a>.</p>
     <p>Clique aqui para realizar outra insercao de questao: <a href="insertion.php">Inserir</a>.</p>
 </body>
 </html>
